--- a/form/name attribute.html
+++ b/form/name attribute.html
@@ -17,6 +17,7 @@
         <button>submit</button>
         <br>
         <br>
+        <!--connecting 2 different pages-->
     </form>
     <form action="https://www.youtube.com/results?">
         <input type="text" placeholder="search in youtube" name="search_query"/>
