--- a/css/14th-positioned/14.html
+++ b/css/14th-positioned/14.html
@@ -11,8 +11,15 @@
         <div></div>
         <div id="static"></div>
     </section>
-    <h2>relative</h2>
-    <div></div>
-    <div id="relative"></div>
+    <section>
+        <h2>relative</h2>
+        <div></div>
+        <div id="relative"></div>
+    </section>
+    <section>
+        <h2>absolute demo</h2>
+        <div></div>
+        <div id="absolute"></div>
+    </section>
 </body>
 </html>
