--- a/css/14th-positioned/14.html
+++ b/css/14th-positioned/14.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Positioned</title>
+    <link rel="stylesheet" href="14.css" />
 </head>
 <body>
     <section>
         <h2>static demo</h2>
         <div></div>
-        <div id="static"></div>
+        <div id="static">static</div>
     </section>
     <section>
         <h2>relative</h2>
         <div></div>
-        <div id="relative"></div>
+        <div id="relative">relative</div>
     </section>
     <section>
         <h2>absolute demo</h2>
         <div></div>
-        <div id="absolute"></div>
+        <div id="absolute">absolute</div>
+    </section>
+        <h2>Fixed</h2>
+        <div></div>
+        <div id="Fixed">fixed</div>
     </section>
 </body>
 </html>
