--- a/css/23th- BOOTSTRAP/23.html
+++ b/css/23th- BOOTSTRAP/23.html
@@ -25,7 +25,20 @@
     <button type="button" class="btn btn-success">btn 3</button>
     <button type="button" class="btn btn-danger">btn 4</button>
     <button type="button" class="btn btn-warning">btn 5</button>
-    </div>
+
+    <br />
+    <h3>NOTIFICATION<span class="badge bg-primary">20+</span></h3>
+ 
+
+    <br />
+    <button class="btn btn-primary">
+    Followers
+    <span class="badge bg-secondary">100+</span>
+    </button>
+    <br />
+    <div class="alert alert-danger">Download Failed! Please try again.</div>
+</div>
+
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
