--- a/css/23th- BOOTSTRAP/23.html
+++ b/css/23th- BOOTSTRAP/23.html
@@ -36,7 +36,11 @@
     <span class="badge bg-secondary">100+</span>
     </button>
     <br />
+
     <div class="alert alert-danger">Download Failed! Please try again.</div>
+    <div class="alert alert-success alert-dismissible">Congratulations! your score is 50/50
+        <button class="btn-close" data-bs-dismiss="alert"></button>
+    </div>
 </div>
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
