--- a/css/css project/project.html
+++ b/css/css project/project.html
@@ -138,7 +138,15 @@
                 </div>
             </div>
         <div class="music-player">
-            <div class="album"></div>
+            <div class="album">
+                <div class="album-icons">
+                    <img src="./assets/controls_icon1.png"  class="album-icons"/>
+                    <img src="./assets/controls_icon2.png"  class="album-icons"/>
+                    <img src="./assets/controls_icon3.png"  class="album-icons"/>
+                    <img src="./assets/controls_icon4.png"  class="album-icons"/>
+                    <img src="./assets/controls_icon5.png"  class="album-icons"/>
+                </div>
+            </div>
             <div class="player">
                <div class="player-controls">
                 <img src="./assets/player_icon1.png"  class="player-control-icon"/>
