--- a/css/css project/project.html
+++ b/css/css project/project.html
@@ -136,8 +136,9 @@
                 <div class="footer">
                     <div class="line"></div>
                 </div>
-            </div>
+        </div>
         <div class="music-player">
+
             <div class="album">
                 <div class="album-icons">
                     <img src="./assets/controls_icon1.png"  class="album-icons"/>
@@ -147,6 +148,7 @@
                     <img src="./assets/controls_icon5.png"  class="album-icons"/>
                 </div>
             </div>
+
             <div class="player">
                <div class="player-controls">
                 <img src="./assets/player_icon1.png"  class="player-control-icon"/>
@@ -162,7 +164,10 @@
                 <span class="tot-time">3:33</span>
                </div>
             </div>
-            <div class="controls"></div>
+
+            <div class="controls">
+            </div>
+
         </div>
     </div>
 </body>
